Resolve "Refactor sandboxes management"